--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="./css/index.css">
     <link rel="icon" href="./assets/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="./js/libs/swiper.js" defer></script>
     <script src="./js/handlers/faqHanlder.js" defer></script>
     <script src="./js/handlers/mobileMenuHanlder.js" defer></script>
     <script src="./js/city-identifier/index.js" defer></script>
+    <script src="./js/handlers/cityHandler.js" defer></script>
+    <script src="./js/handlers/modalFormHandler.js" defer></script>
     <title>Ростелеком</title>
 </head>
 <body>
@@ -39,11 +42,85 @@
             </ul>
         </nav>
     </div>
+    <div class="modal-window-wrapper modal-window-wrapper_hidden" id="modalCity">
+        <div class="modal-window animate__animated animate__fadeInUp">
+            <div class="modal-window__cross" id="closeModalBtn">
+                <span></span>
+            </div>
+            <p class="modal-window__title">Выберите ваш город</p>
+            <input type="text" class="modal-window__input" placeholder="Введите название города" id="searchCityHandler">
+            <div class="modal-window__search-result modal-window__search-result_hidden" id="searchResult">
+                <p id="searchResultCity">Москва</p>
+            </div>
+            <ul class="modal-window__list">
+                <li class="modal-window__list-item" data-region="Самарская">Самара</li>
+                <li class="modal-window__list-item" data-region="Самарская">Тольятти</li>
+                <li class="modal-window__list-item" data-region="Самарская">Сызрань</li>
+                <li class="modal-window__list-item" data-region="Самарская">Новокуйбышевск</li>
+                <li class="modal-window__list-item" data-region="Самарская">Чапаевск</li>
+                <li class="modal-window__list-item" data-region="Оренбургская">Оренбург</li>
+                <li class="modal-window__list-item" data-region="Оренбургская">Орск</li>
+                <li class="modal-window__list-item" data-region="Татарстан">Казань</li>
+                <li class="modal-window__list-item" data-region="Татарстан">Набережные Челны</li>
+                <li class="modal-window__list-item" data-region="Татарстан">Нижнекамск</li>
+                <li class="modal-window__list-item" data-region="Саратовская">Саратов</li>
+                <li class="modal-window__list-item" data-region="Саратовская">Энгельс</li>
+                <li class="modal-window__list-item" data-region="Саратовская">Балаково</li>
+            </ul>
+
+        </div>
+    </div>
+    <div class="modal-window-wrapper modal-window-wrapper_hidden" id="modalForm">
+        <div class="modal-window modal-window_form animate__animated animate__fadeInUp">
+            <div class="modal-window__cross modal-window__cross_form" id="closeModalFormBtn">
+                <span></span>
+            </div>
+            <p class="modal-window__title">Вы выбрали тариф</p>
+            <p></p>
+            <p class="modal-window__price-title">Стоимость:</p>
+            <p class=""></p>
+            <div class="modal-window__price-wrapper">
+                <p class="modal-window__price-text">За три месяца</p>
+                <p class="modal-window__price-number"><span>555</span> ₽/месяц</p>
+            </div>
+            <div class="modal-window__price-wrapper">
+                <p class="modal-window__price-text">С четвертого месяца</p>
+                <p class="modal-window__price-number"><span>750</span> ₽/месяц</p>
+            </div>
+            <div class="modal-window__price-wrapper">
+                <p class="modal-window__price-text">К тарифу добавлено оборудование:</p>
+                <p class="modal-window__price-number">Роутер по акции</p>
+            </div>
+            <form action="" class="modal-window__form">
+                <p class="">Оставьте вашу заявку</p>
+                <input type="text" class="modal-window__input modal-window__input_form" placeholder="Ваш номер">
+                <input type="text" class="modal-window__input modal-window__input_form" placeholder="Ваше имя">
+                <button class="modal-window__form-btn">Оставить заявку</button>
+            </form>
+        </div>
+    </div>
     <section class="presentation">
         <header class="presentation__header">
             <nav class="presentation__header-wrapper">
                 <img src="./assets/images/header/header-logo_ru.svg" alt="Здесь должен быть логотип компании" class="header__logo">
-                <p class="header__city" id="cityElement">Тольятти</p>
+                <div class="header__city-wrapper">
+                    <svg viewBox="0 0 14 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                            <g transform="translate(-649.000000, -1262.000000)">
+                                <g  transform="translate(100.000000, 1162.000000)">
+                                    <g transform="translate(544.000000, 98.000000)">
+                                        <g>
+                                            <polygon id="Path" points="0 0 24 0 24 24 0 24"></polygon>
+                                            <path d="M12,2 C8.13,2 5,5.13 5,9 C5,14.25 12,22 12,22 C12,22 19,14.25 19,9 C19,5.13 15.87,2 12,2 Z M7,9 C7,6.24 9.24,4 12,4 C14.76,4 17,6.24 17,9 C17,11.88 14.12,16.19 12,18.88 C9.92,16.21 7,11.85 7,9 Z" fill="#e1473d"></path>
+                                            <circle fill="#e1473d" cx="12" cy="9" r="2.5"></circle>
+                                        </g>
+                                    </g>
+                                </g>
+                            </g>
+                        </g>
+                    </svg>
+                    <p class="header__city" id="cityElement">Москва</p>
+                </div>
                 <a href="#tariffs" class="header__link">Тарифы</a>
                 <div class="header__link-wrapper">
                     <a href="tel:+79506697080" class="header__link_phone">8-950-669-70-80</a>
@@ -177,7 +254,7 @@
                 </main>
                 <footer class="tariff__footer">
                     <p class="tariff__price"><span>499</span> ₽/месяц</p>
-                    <button class="tariff__btn">Подключить</button>
+                    <button class="tariff__btn" id="firstTariffBtn">Подключить</button>
                 </footer>
             </div>
             <div class="tariffs__tariff">
@@ -202,7 +279,7 @@
                     <p class="tariff__price_promo"><span>Бесплатный</span> месяц</p>
                     <p>Роутер по акции</p>
                     <p class="tariff__price"><span>699</span> ₽/месяц</p>
-                    <button class="tariff__btn">Подключить</button>
+                    <button class="tariff__btn" id="secondTariffBtn">Подключить</button>
                 </footer>
             </div>
             <div class="tariffs__tariff tariffs__tariff_snow">
@@ -230,10 +307,10 @@
                     </ul>
                 </main>
                 <footer class="tariff__footer">
-                    <p class="tariff__price_promo"><span>555</span> ₽ за 3 месяца</p>
+                    <p class="tariff__price_promo"><span id="tariffPricePromo">555</span> ₽ за 3 месяца</p>
                     <p>Роутер по акции</p>
-                    <p class="tariff__price"><span>750</span> ₽/месяц</p>
-                    <button class="tariff__btn_gradient">Подключить</button>
+                    <p class="tariff__price"><span id="tariffPrice">750</span> ₽/месяц</p>
+                    <button class="tariff__btn_gradient" id="thirdTariffBtn">Подключить</button>
                 </footer>
             </div>
             <div class="tariffs__tariff">
@@ -261,7 +338,7 @@
                 <footer class="tariff__footer">
                     <p class="tariff__price"><span>1100</span> ₽/месяц</p>
                     <p>Роутер по акции</p>
-                    <button class="tariff__btn">Подключить</button>
+                    <button class="tariff__btn" id="fourthTariffBtn">Подключить</button>
                 </footer>
             </div>
         </main>
